--- a/src/main.css
+++ b/src/main.css
@@ -17,3 +17,24 @@ body {
 h1 {
   margin: 22px 0;
 }
+
+nav {
+  align-items: center;
+  display: flex;
+  gap: 22px;
+}
+
+a {
+  color: orangered;
+  text-decoration: none;
+}
+
+a, button {
+  font-weight: 700;
+  transform: filter 0.2s;
+}
+
+button:hover, a:hover {
+  filter: brightness(0.8);  
+}
+
