--- a/src/main.css
+++ b/src/main.css
@@ -38,3 +38,14 @@ button:hover, a:hover {
   filter: brightness(0.8);  
 }
 
+span {
+  font-weight: 600;
+  color: #333;
+  font-size: 14px;
+}
+
+strong {
+  color: orangered;
+  text-transform: uppercase;
+}
+
