--- a/src/main.css
+++ b/src/main.css
@@ -12,6 +12,8 @@ body {
   align-items: center;
 
   background-color: #fbf4f4;
+
+  padding: 32px;
 }
 
 h1 {
@@ -56,5 +58,23 @@ Button {
   border: none;
   color: #fff;
   cursor: pointer;
+}
+
+.cards {
+  display: flex;
+  gap: 16px;
+  margin: 18px 0;
+  flex-wrap: wrap;
+}
+.cards a {
+  width: 100px;
+  height: 100px;
+  background-color: #d7eff9;
+  color: #0095e5;
+  border-radius: 12px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 0 4px rgba(0,0,0,0.2);
 }
 
